fixed tech blocks

--- a/index.html
+++ b/index.html
@@ -197,13 +197,13 @@
 				<div class="col-sm-6 col-md-3">
 					<a href="#"><img src="./images/React.png" class="logoTechBlock fa" alt="React Logo"></a>
 					<h3>React</h3>
-					<p>We used React starting from Glassdale in the front end, and
+					<p id="mh">We used React starting from Glassdale in the front end, and
 						picked it back up in the backend on the final Group Project.</p>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<a href="#"><img src="./images/JavaScript.png" class="logoTechBlock fa" alt="JavaScript Logo"></a>
 					<h3>JavaScript</h3>
-					<p>Pre-work was kicked off with JavaScript, and we dug into
+					<p id="mh">Pre-work was kicked off with JavaScript, and we dug into
 						it further throughout the front-end.
 					</p>
 				</div>
@@ -212,63 +212,63 @@
 					<h3>
 						HTML5
 					</h3>
-					<p>Divs. Articles. Sections. What's not to like.</p>
+					<p id="mh">Divs. Articles. Sections. What's not to like.</p>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<a href="#"><img src="./images/CSS.png" class="logoTechBlock fa" alt="CSS Logo"></a>
 					<h3>CSS3</h3>
-					<p>Some people hate it. Some people love it. I am among the latter.
+					<p id="mh">Some people hate it. Some people love it. I am among the latter.
 						If you love the backend: you're welcome.
 					</p>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<a href="#"><img src="./images/dotNet.png" class="logoTechBlock fa" alt=".Net Logo"></a>
 					<h3>.NET</h3>
-					<p>Dear Microsoft: is there a position open in your naming department?
+					<p id="mh">Dear Microsoft: is there a position open in your naming department?
 						If not, how come?
 					</p>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<a href="#"><img src="./images/Canva.png" class="logoTechBlock fa" alt="Canva Logo"></a>
 					<h3>Canva</h3>
-					<p>Between photoshop and canva. I'll take Canva with a small side
+					<p id="mh">Between photoshop and canva. I'll take Canva with a small side
 						of photoshop.
 					</p>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<a href="#"><img src="./images/aspnetMVC.png" class="logoTechBlock fa" alt="ASP.NET MVC Logo"></a>
 					<h3>ASP.NET MVC</h3>
-					<p>Dear Microsoft, again with the naming thing. Really?
+					<p id="mh">Dear Microsoft, again with the naming thing. Really?
 					</p>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<a href="#"><img src="./images/Coolors.png" class="logoTechBlock fa" alt="Coolors Logo"></a>
 					<h3>Coolers</h3>
-					<p>Where every css project starts: the color pallet. Thank you, coolers.
+					<p id="mh">Where every css project starts: the color pallet. Thank you, coolers.
 						You rock.
 					</p>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<a href="#"><img src="./images/VS Code.png" class="logoTechBlock fa" alt="VS Code Logo"></a>
 					<h3>VS Code</h3>
-					<p>Code . </p>
+					<p id="mh">Code . </p>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<a href="#"><img src="./images/VS.png" class="logoTechBlock fa" alt="VS Logo"></a>
 					<h3>Visual Studio</h3>
-					<p>VS, you sure are wonderful. But when is autosave going to be available?</p>
+					<p id="mh">VS, you sure are wonderful. But when is autosave going to be available?</p>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<a href="#"><img src="./images/dbDiagram.png" class="logoTechBlock fa" alt="dbDiagram Logo"></a>
 					<h3>dbDiagram</h3>
-					<p>To help understand data flow, we used dbDiagram to build our Entity Relationship
+					<p id="mh">To help understand data flow, we used dbDiagram to build our Entity Relationship
 						Diagrams, starting with the class project: Glassdale.
 					</p>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<a href="#"><img src="./images/Figma.png" class="logoTechBlock fa" alt="dbDiagram Logo"></a>
 					<h3>Figma</h3>
-					<p>Plan. Plan. And then plan some more.
+					<p id="mh">Plan. Plan. And then plan some more.
 						Figma was an awesome resource for mapping out wireframes and event listener flow
 						charts, throughout my time at NSS.
 					</p>
@@ -276,7 +276,7 @@
 				<div class="col-sm-6 col-md-3">
 					<a href="#"><img src="./images/Cloudinary.png" class="logoTechBlock fa" alt="Cloudinary Logo"></a>
 					<h3>Cloudinary</h3>
-					<p>Being able to add images to my capstone project was a great feature!
+					<p id="mh">Being able to add images to my capstone project was a great feature!
 						Cloudinary uploaded and stored photos that users chose for their
 						profile picture.
 					</p>
@@ -284,19 +284,19 @@
 				<div class="col-sm-6 col-md-3">
 					<a href="#"><img src="./images/Git.png" class="logoTechBlock fa" alt="Git Logo"></a>
 					<h3>Git</h3>
-					<p>You know you might be new to git, if you keep accidentally typing get.
+					<p id="mh">You know you might be new to git, if you keep accidentally typing get.
 					</p>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<a href="#"><img src="./images/GitHub.png" class="logoTechBlock fa" alt="GitHub Logo"></a>
 					<h3>GitHub</h3>
-					<p>Is anyone else amazed that this awesome resource is free? Thank you, GitHub!
+					<p id="mh">Is anyone else amazed that this awesome resource is free? Thank you, GitHub!
 					</p>
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<a href="#"><img src="./images/C.png" class="logoTechBlock fa" alt="C# Logo"></a>
 					<h3>C#</h3>
-					<p>I may wear glasses, but I can still C#.
+					<p id="mh">I may wear glasses, but I can still C#.
 					</p>
 				</div>
 
