fixed wording on portfolio section

--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
 				<div class="col-md-8">
 					<h2>PORTFOLIO</h2>
 					<p>The following are a sample of the applications that I have created either as part of my
-						classwork,
-						as part of a group or a solo project. Click on each picture for details on the project.
+						classwork, or as a practice project executed on my own. Click on each picture for details on the
+						project.
 					</p>
 				</div>
 				<div class="col-md-12"></div>
