--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="keywords" content="">
 	<meta name="description" content="">
-	<title>Composite Template</title>
+	<title>The Jess Zone</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/templatemo_style.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
@@ -173,7 +173,7 @@
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<div class="image_thumb">
-						<img src="images/vibes.png" class="img-responsive" alt="work">
+						<img src="images/splitzites.png" class="img-responsive" alt="work">
 						<div class="image_overlay">
 							<a href="#"><i class="fa fa-map-marker"></i></a>
 						</div>
@@ -614,6 +614,62 @@
 					</div>
 				</section>
 			</div>
+
+
+
+			<div class="row">
+				<div class="col-md-12" id="FAF"></div>
+				<section class="col-sm-6 col-md-6">
+					<div class="videoPosition">
+						<div class="projectDescription fAF">
+							<h3>Splitzies</h3>
+							<div class="projectInfo">
+								<p>SOLO PROJECT | </p>
+								<a href="https://github.com/jessicadever1/_Splitzies_" class="paddingLeft">
+									View
+									Code</a>
+							</div>
+							<p>Splitzies is for those amoung us who enjoy going out in the world to do things that
+								cost money with friends! It is the solution to figuring out how much you owe to who,
+								given how much you have already paid into the event - or rather, the splitz.
+
+								As a full CRUD application, the user is provided with a list of their splitz upon
+								login, which they can update as they go. They can add, edit or delete expenses and
+								details of the splitz. Or start a new splitz altogether, in which they can also add
+								friends to. As the splitz goes on, and expenses are added, the user is given back three
+								key numbers: the portion they are responsible for, how much they still owe and how much
+								they owe to who.</p>
+							<!-- <h4>Technology Used: </h4> -->
+							<div class="techUsed">
+								<img src="./images/React.png" class="logo" alt="React Logo">
+								<img src="./images/C.png" class="logo" alt="C# logo">
+								<img src="./images/SQL.png" class="logo" alt="sql logo">
+								<img src="./images/VS.png" class="logo" alt="Visual Studio logo">
+								<img src="./images/NET.png" class="logo" alt="dotnet logo">
+								<img src="./images/CSS.png" class="logo" alt="CSS Logo">
+								<img src="./images/ReactStrap.png" class="logo" alt="react strap logo">
+								<img src="./images/Canva.png" class="logo" alt="Canva Logo">
+								<img src="./images/Coolors.png" class="logo" alt="Coolors Logo">
+								<img src="./images/VS Code.png" class="logo" alt="VS Code Logo">
+								<img src="./images/dbDiagram.png" class="logo" alt="dbDiagram Logo">
+								<img src="./images/Figma.png" class="logo" alt="dbDiagram Logo">
+								<img src="images/Git.png" class="logo" alt="git logo">
+								<img src="images/GitHub.png" class="logo" alt="github logo">
+							</div>
+						</div>
+					</div>
+				</section>
+				<section class="col-sm-6 col-md-6">
+					<div class="a">
+						<img class="img-responsive" id="maxh" src="./images/MySplitz.PNG">
+
+						</img>
+					</div>
+				</section>
+			</div>
+
+
+
 		</div>
 	</section>
 
